--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     } = Homework;
 
     const promisify = (fn) => (...args) => {
-        return new Promise((resolve) => {
-            fn.call(this, ...args, (result) => resolve(result));
+        return new Promise((resolve, reject) => {
+            try {
+                fn(...args, resolve);
+            }
+            catch(err) {
+                reject(err);
+            }
         });
     };
 
     const map = (array, fn, cb) => {
         const lengthPromise = promisify(array.length);
         const getPromise = promisify(array.get);
-        
+
         lengthPromise().then((length) => {
             // Принял, что запрет на использование массивов, мат. операций и операций сравнения относится только к операциям с данными.
             const promises = [];
@@ -27,7 +32,8 @@
 
             return Promise.all(promises);
         })
-        .then((result) => cb(new AsyncArray(result)));
+        .then((result) => cb(new AsyncArray(result)))
+        .catch((err) => { throw err; });
     };
 
     const printDelimeter = () => console.log('------------------------------');
